# internal/infrastructure/ogen/oas_uri_gen.go
@@ -1,0 +1,35 @@
+// Code generated by ogen, DO NOT EDIT.
+
+package api
+
+import (
+	"github.com/go-faster/errors"
+
+	"github.com/ogen-go/ogen/uri"
+)
+
+// EncodeURI encodes UserCreated as URI form.
+func (s *UserCreated) EncodeURI(e uri.Encoder) error {
+	return nil
+}
+
+var uriFieldsNameOfUserCreated = [0]string{}
+
+// DecodeURI decodes UserCreated from URI form.
+func (s *UserCreated) DecodeURI(d uri.Decoder) error {
+	if s == nil {
+		return errors.New("invalid: unable to decode UserCreated to nil")
+	}
+
+	if err := d.DecodeFields(func(k string, d uri.Decoder) error {
+		switch k {
+		default:
+			return nil
+		}
+		return nil
+	}); err != nil {
+		return errors.Wrap(err, "decode UserCreated")
+	}
+
+	return nil
+}
